// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paginator /> render should render a <Pagination> with 2 pages with currentPage 1 and children over it 1`] = `
<div
  className="paginator"
>
  <div>
    Some paginated children
  </div>
  <div
    className="pagination__nav"
  >
    <div
      className="MuiInputBase-root-21 MuiOutlinedInput-root-8 pageLimiter"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-38 MuiOutlinedInput-notchedOutline-15"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-39"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <div
        className="MuiSelect-root-1"
      >
        <select
          className="MuiSelect-select-2 MuiInputBase-input-31 MuiOutlinedInput-input-16"
          id="outlined-age-native-simple"
          multiple={false}
          name="Limit"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value={5}
        >
          <option
            value={5}
          >
            5
          </option>
          <option
            value={10}
          >
            10
          </option>
          <option
            value={15}
          >
            15
          </option>
          <option
            value={20}
          >
            20
          </option>
          <option
            value={25}
          >
            25
          </option>
        </select>
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-40 MuiSelect-icon-7"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Paginator /> toolkit enable should render <Pagination> with children above and <Search> and <Filter> toolkit components 1`] = `
<div
  className="paginator"
>
  <div
    className="paginator__toolkit"
  >
    <div
      className="paginator__toolkit__item"
    >
      <div
        className="Search-search-49"
      >
        <div
          className="Search-searchIcon-50"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-40"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
        <div
          className="MuiInputBase-root-21 MuiInput-root-53 Search-inputRoot-51 MuiInput-underline-57"
          onClick={[Function]}
        >
          <input
            className="MuiInputBase-input-31 MuiInput-input-61 Search-inputInput-52"
            name="search"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search…"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="paginator__toolkit__item"
    >
      <div
        className="MuiFormControl-root-66"
        style={
          Object {
            "width": 100,
          }
        }
      >
        <label
          className="MuiFormLabel-root-81 MuiInputLabel-root-70 MuiInputLabel-formControl-75 MuiInputLabel-animated-78"
          data-shrink={false}
          htmlFor="select-multiple-checkbox"
          style={
            Object {
              "left": 4,
              "top": -10,
            }
          }
        >
          Filters
        </label>
        <div
          className="MuiInputBase-root-21 MuiInput-root-53 MuiInput-underline-57 MuiInputBase-formControl-22 MuiInput-formControl-54"
          onClick={[Function]}
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="MuiSelect-root-1"
          >
            <div
              aria-haspopup="true"
              aria-pressed="false"
              className="MuiSelect-select-2 MuiSelect-selectMenu-5 MuiInputBase-input-31 MuiInput-input-61"
              id="select-filters"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </div>
            <input
              id="select-multiple-checkbox"
              name="filters"
              placeholder="Filters"
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-40 MuiSelect-icon-7"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="paginator__toolkit__item"
    >
      <div
        className="MuiFormControl-root-66"
        style={
          Object {
            "width": 140,
          }
        }
      >
        <label
          className="MuiFormLabel-root-81 MuiInputLabel-root-70 MuiInputLabel-formControl-75 MuiInputLabel-animated-78"
          data-shrink={false}
          htmlFor="select-multiple-checkbox"
          style={
            Object {
              "left": 4,
              "top": -10,
            }
          }
        >
          Hide Columns
        </label>
        <div
          className="MuiInputBase-root-21 MuiInput-root-53 MuiInput-underline-57 MuiInputBase-formControl-22 MuiInput-formControl-54"
          onClick={[Function]}
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            className="MuiSelect-root-1"
          >
            <div
              aria-haspopup="true"
              aria-pressed="false"
              className="MuiSelect-select-2 MuiSelect-selectMenu-5 MuiInputBase-input-31 MuiInput-input-61"
              id="select-hideColumns"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </div>
            <input
              id="select-multiple-checkbox"
              name="hideColumns"
              placeholder="Filters"
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-40 MuiSelect-icon-7"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    Some paginated children
  </div>
  <div
    className="pagination__nav"
  >
    <div
      className="MuiInputBase-root-21 MuiOutlinedInput-root-8 pageLimiter"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-38 MuiOutlinedInput-notchedOutline-15"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-39"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <div
        className="MuiSelect-root-1"
      >
        <select
          className="MuiSelect-select-2 MuiInputBase-input-31 MuiOutlinedInput-input-16"
          id="outlined-age-native-simple"
          multiple={false}
          name="Limit"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          value={5}
        >
          <option
            value={5}
          >
            5
          </option>
          <option
            value={10}
          >
            10
          </option>
          <option
            value={15}
          >
            15
          </option>
          <option
            value={20}
          >
            20
          </option>
          <option
            value={25}
          >
            25
          </option>
        </select>
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-40 MuiSelect-icon-7"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
